--- a/README.textile
+++ b/README.textile
@@ -17,9 +17,9 @@ h3. Command line
 
 In order to translate a text with the help of google translate :
 
-<shell>
+<pre><code>
 bundle exec parrot "My text to translate" en:fr
-</shell>
+</code></pre>
 
 where:
 en is source language and fr is destination language
@@ -30,51 +30,51 @@ h4. Standard use
 
 This is used to translate a text to another with or without google translation
 
-<ruby>
+<pre><code>
 #...
   guess = ParrotTn::Guess.new :google => true
   puts guess.translation_of "My text to translate", :from => :en, :to => :fr
 #...
-</ruby>
+</code></pre>
 
 h4. Convert yaml file
 
 To convert a yaml file, use :
 
-<ruby>
+<pre><code>
   parser = ParrotTn::ParserYml.new :google => true
   parser.parrotize_yaml "path_to_file", :fr
-</ruby>
+</code></pre>
 
 The resulting file is saved to the current directory but can be changed using :save_to option.
 The source file must start with the code language as root, as shown below:
 
-<ruby>
+<pre><code>
 en:
   ...
-</ruby>
+</code></pre>
 
 Usually the file is an i18n file :
 
-<ruby>
+<pre><code>
 en:
   code_a: "House"
   code_b:
     - "Monday"
     - "Tuesday"
 
-</ruby>
+</code></pre>
 
 will be converted to french for instance, as shown bellow:
 
-<ruby>
+<pre><code>
 fr:
   code_a: "Maison"
   code_b:
     - "Lundi"
     - "Mardi"
 
-</ruby>
+</code></pre>
 
 h3. Local dictionnaries
 
@@ -90,11 +90,11 @@ where:
 
 and inside the file:
 
-<ruby>
+<pre><code>
 en_fr:
   "House": "Maison"
   ...
-</ruby>
+</code></pre>
 
 h2. Next releases
 
@@ -112,7 +112,7 @@ If you want to use ParrotTn to translate your rails application using google wit
 
 h3. Add code to ::I18n object
 
-<ruby>
+<pre><code>
 module Mixins
   module I18n
     module Backend
@@ -142,21 +142,21 @@ module Mixins
     end
   end
 end
-</ruby>
+</code></pre>
 
 h3. Include in object
 
 Add this mixins into the ::I18n module
 
-<ruby>
+<pre><code>
   ::I18n::Backend::Base.send(:include, Mixins::I18n::Backend::Base)
-</ruby>
+</code></pre>
 
 h3. Add a new initializer
 
 And the following code:
 
-<ruby>
+<pre><code>
 # Parrot Translator
 #
 #
@@ -169,16 +169,16 @@ $display_in_lang = (ENV["RAILSDISPLG"] || "fr").to_sym
 # Initialize Parrot Translation
 $parrot = ParrotTn::Guess.new :google => true, :user_agent => false, :strict => false
 
-</ruby>
+</code></pre>
 
 h3. Conclusion
 
 Let's try to display you website in any language you define in environment variable :
 
-<shell>
+<pre><code>
 export RAILSDISPLG=es
 bundle exec rails s
-</shell>
+</code></pre>
 
 NOTE: The translation may not be obviously perfect but this why there are some local dictionaries and it's a first preview of the website before translation.
 
